--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body style="margin: 0">
   <!-- <div id="centered">MISH MASH FEST</div> -->
+  <div id="alpha"></div>
   <div id="beta"></div>
+  <div id="gamma"></div>
 
   <svg id="vertical" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
     <g id="Layer_1">
