--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <div id="beta"></div>
   <div id="gamma"></div>
 
+  <div id="posx"></div>
+  <div id="posy"></div>
+  <div id="layers"></div>
+
   <svg id="vertical" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
     <g id="Layer_1">
     <path class="st0" d="M50,56.3c1.8,0,3.3-0.7,4.5-1.9s1.9-2.7,1.9-4.5s-0.7-3.3-1.9-4.5s-2.7-1.9-4.5-1.9s-3.3,0.7-4.5,1.9
