--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="posy"></div>
   <div id="layers"></div>
 
-  <svg id="vertical" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
+  <svg id="svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
     <g id="Layer_1">
     <path class="st0" d="M50,56.3c1.8,0,3.3-0.7,4.5-1.9s1.9-2.7,1.9-4.5s-0.7-3.3-1.9-4.5s-2.7-1.9-4.5-1.9s-3.3,0.7-4.5,1.9
     s-1.9,2.7-1.9,4.5s0.7,3.3,1.9,4.5S48.2,56.3,50,56.3z"/>
