--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="posy"></div>
   <div id="layers"></div>
 
-  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+  <svg id="svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
        viewbox="0 0 1616.7 1616.7" style="enable-background:new 0 0 1616.7 1616.7;" xml:space="preserve">
     <g id="_x31__x5F_5">
       <path d="M707.4,303l39,70.8v4.3c-27,141.2-94.5,214.8-144.2,214.8c-66.5,0-100.6-46.8-100.6-108.9s41.3-112.5,48.5-144.3
